# genomatnn

./: .gitignore  LICENCE  README.md  annotate.py  calibrate.py  config.py  contact.py  convert.py  environment-gpu.yml  environment.yml  example.toml  genomatnn.py  plots.py  provenance.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sim.py  stddot.py  tfstuff.py  ts2mat.py  vcf.py  vcf2mat.py
.github/workflows/: ci.yml  python-package.yml
demographic_models/: HomininComposite2_4G20.yaml  HomininComposite_4G20.yaml  PapuansOutOfAfrica_10J19.yaml
examples/: 1000g.Nea.22.1mb.vcf.gz.csi  Den_to_CHB.toml  Den_to_Papuan.toml  HGDP.1000g.archaic.22.1mb.vcf.gz.csi  IGDP.indlist  Nea_to_CEU.toml  test-example.toml
genomatnn/: __init__.py  calibrate.py  cli.py  config.py  convert.py  misc.pyx  plots.py  provenance.py  sim.py  stddot.py  tfstuff.py  vcf.py
pre-trained/: Den_to_Melanesian_af-0.05_827344748.hdf5  Den_to_Melanesian_af-0.25_951364036.hdf5  Nea_to_CEU_af-0.05_2250018620.hdf5  Nea_to_CEU_af-0.25_2918410235.hdf5
predictions/: Den_to_Papuan_af-0.05_w-0.02.tsv  Den_to_Papuan_af-0.05_w-0.1.tsv  Den_to_Papuan_af-0.05_w-1.tsv  Den_to_Papuan_af-0.25_w-0.02.tsv  Den_to_Papuan_af-0.25_w-0.1.tsv  Den_to_Papuan_af-0.25_w-1.tsv  Nea_to_CEU_af-0.05_w-0.02.tsv  Nea_to_CEU_af-0.05_w-0.1.tsv  Nea_to_CEU_af-0.05_w-1.tsv  Nea_to_CEU_af-0.25_w-0.02.tsv  Nea_to_CEU_af-0.25_w-0.1.tsv  Nea_to_CEU_af-0.25_w-1.tsv  README.md
tests/: __init__.py  test_calibrate.py  test_cli.py  test_contact.py  test_convert.py  test_genomatnn.py  test_misc.py  test_tfstuff.py  test_vcf.py
