[metadata]
name = genomatnn
author = Graham Gower
license = ISC
description = genotype matrices and neutral networks
url = https://github.com/grahamgower/genomatnn
classifiers =
    Development Status :: Development Status :: 3 - Alpha
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = genomatnn
zip_safe = False
include_package_data = True
python_requires = >=3.6
install_requires =
    attrs >= 19.1.0
    msprime
    stdpopsim
    zarr
    toml
    tensorflow >= 2.2.0
    matplotlib
    sklearn
    setuptools >= 41.2
setup_requires =
    setuptools >= 41.2
    setuptools_scm
