[metadata]
name = genomatnn
author = Graham Gower
license = ISC
description = genotype matrices and neutral networks
url = https://github.com/grahamgower/genomatnn
classifiers =
    Development Status :: Development Status :: 3 - Alpha
    License :: OSI Approved :: ISC License (ISCL)
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = genomatnn
zip_safe = False
include_package_data = True
python_requires = >=3.6
install_requires =
    attrs >= 19.1.0
    msprime
    stdpopsim @ git+https://github.com/grahamgower/stdpopsim.git@selection
    zarr
    toml
    tensorflow >= 2.2.0
    matplotlib
    scikit-learn
    setuptools >= 41.2
    tf-keras-vis
    cython
setup_requires =
    setuptools >= 41.2
    setuptools_scm
    cython

[options.extras_require]
dev = cython

[cython-module: genomatnn.misc]
sources = genomatnn/misc.pyx
include_dirs = eval(__import__('numpy').get_include())
language = c
